fix promo box's width and adjust spacing

--- a/css/sass/partials/_typography.scss
+++ b/css/sass/partials/_typography.scss
@@ -288,14 +288,28 @@ p.note {
 }
 p.promo {
 	@include h2;
+	line-height: (2.4em/1.8);
+	text-indent: 0;
 	border: 10px solid $accent-color;
 	padding: 12px 16px 15px 16px;
-	text-indent: 0;
+	max-width: 608px;
 	@include breakpoint(medium) {
 		@include h2-small;
+		line-height: (2.9em/2.1);
 		padding: 16px 21px 18px 21px;
+		margin-bottom: 5px;
+		max-width: 598px;
 	}
 	@include breakpoint(large) {
+		line-height: (3em/2.1);
 		padding: 20px 25px 23px 25px;
+		margin-bottom: 10px;
+		max-width: 590px;
+	}
+	@include breakpoint(huge) {
+		font-size: 2.4em;
+		line-height: (3.2em/2.4);
+		margin-bottom: 14px;
+		max-width: 690px;
 	}
 }
